More design mockups for goodmoves

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -628,19 +628,19 @@ a {
     .key-info-extra {
       // margin-top: $unit*1.5;
       padding: $unit;
-      background-color: $mdc-theme-primary-light;
+      background-color: $mdc-theme-complimentary-light;
       .mdc-chip {
         margin-bottom: $unit/4;
         padding: $unit/5 $unit/2;
         vertical-align: top;
         font-weight: 600;
-        color: white;
-        background-color: $mdc-theme-primary;
+        color: $mdc-theme-secondary-dark;
+        background-color: $mdc-theme-complimentary;
       }
       .mdc-chip:hover {
         text-decoration: none;
-        color: white;
-        background-color: $mdc-theme-primary-dark;
+        color: $mdc-theme-secondary-light;
+        background-color: $mdc-theme-complimentary-dark;
       }
       a {
         color: $mdc-theme-primary-dark;
@@ -1157,9 +1157,9 @@ body {
 }
 
 .home-banner {
-  background-size: contain;
-  background-repeat: no-repeat;
   .banner-search {
+    background-size: cover;
+    background-repeat: no-repeat;
     .content {
       background-color: rgba(255, 255, 255, 0.9);
       padding: $unit $unit*2;
@@ -1212,7 +1212,7 @@ body {
 }
 .currently-recruiting {
   padding: $unit $unit*1.5 $unit !important;
-  box-shadow: $toolbar-shadow-reverse;
+  // box-shadow: $toolbar-shadow-reverse;
   background-color: #ededed;
   .organisation-logo:before {
     content: "";
