--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -11,10 +11,6 @@
         <span class="far fa-map-marker-alt fa-fw" aria-hidden="true"></span>
         Location
       </a>
-      <a class="mdc-tab" role="tab" aria-controls="panel-3">
-        <span class="far fa-handshake fa-fw" aria-hidden="true"></span>
-        Apply
-      </a>
       <span class="mdc-tab-bar__indicator"></span>
     </div>
     <hr class="mdc-list-divider" />
@@ -22,6 +18,12 @@
       <div class="panel panel--active mdc-card--full-content" role="tabpanel" aria-hidden="false" id="panel-1">
         <div class="key-info-extra">
           <ul class="fa-ul">
+            {{#if start_at ~}}
+            <li class="mdc-card__info--vacancy-closing mdc-typography--body1">
+              <span class="fa-li"><span class="far fa-calendar-plus fa-fw" title="Start date"></span></span>
+              Advertised from {{momentFormat (moment start_at "x") "Do MMMM YYYY"}}
+            </li>
+            {{/if ~}}
             {{#if salary_info ~}}
             <li class="mdc-card__info--vacancy-location mdc-typography--body1">
               <span class="fa-li"><span class="far fa-info-circle fa-fw" title="Salary information"></span></span>
@@ -55,15 +57,11 @@
               {{reference_number}}
             </li>
             {{/if ~}}
-            {{#if organisation.website ~}}
-            {{#compare organisation.website "===" null ~}}
-            <li class="mdc-card__info--vacancy-website mdc-typography--body1">
-              <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
-              <a href="{{organisation_website_url}}">
-                {{organisation.website}}
-              </a>
+            {{#if closing_date ~}}
+            <li class="mdc-card__info--vacancy-closing mdc-typography--body1">
+              <span class="fa-li"><span class="far fa-calendar-alt fa-fw" title="Closing date"></span></span>
+              Closing on {{momentFormat (moment closing_date "x") "dddd \t\h\e Do \o\f MMMM YYYY \a\t h:mm a"}}
             </li>
-            {{/compare}}
             {{/if ~}}
           </ul>
         </div>
@@ -74,7 +72,17 @@
             {{{description}}}
           </div>
           {{/if ~}}
+
           {{{rendered.goodmoves_sponsor_logos}}}
+
+          {{#if application_notes ~}}
+          <h4>Application notes</h4>
+          <div class="mdc-typography--body1">
+            {{{application_notes}}}
+          </div>
+          {{/if ~}}
+
+          {{{rendered.goodmoves_downloads}}}
         </div>
       </div>
       <div class="panel mdc-card--full-content mdc-typography--body1" role="tabpanel" aria-hidden="true" id="panel-2">
@@ -85,6 +93,18 @@
             {{{organisation.profile}}}
           </div>
         </div>
+        {{/if ~}}
+        {{#if organisation.website ~}}
+        {{#compare organisation.website "===" null ~}}
+        <ul class="fa-ul">
+          <li class="mdc-card__info--vacancy-website mdc-typography--body1">
+            <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
+            <a href="{{organisation_website_url}}">
+              {{organisation.website}}
+            </a>
+          </li>
+        </ul>
+        {{/compare}}
         {{/if ~}}
         <div class="detailed-info">
           {{#if geo_vacancy_coords}}
@@ -103,32 +123,6 @@
             "{{location}}"
           </p>
           {{/if}}
-        </div>
-      </div>
-      <div class="panel mdc-card--full-content mdc-typography--body1" role="tabpanel" aria-hidden="true" id="panel-3">
-        <div class="key-info-extra">
-          <ul class="fa-ul">
-            {{#if start_at ~}}
-            <li class="mdc-card__info--vacancy-closing mdc-typography--body1">
-              <span class="fa-li"><span class="far fa-calendar-plus fa-fw" title="Start date"></span></span>
-              Advertised from {{momentFormat (moment start_at "x") "Do MMMM YYYY"}}
-            </li>
-            {{/if ~}}
-            {{#if closing_date ~}}
-            <li class="mdc-card__info--vacancy-closing mdc-typography--body1">
-              <span class="fa-li"><span class="far fa-calendar-alt fa-fw" title="Closing date"></span></span>
-              Closing on {{momentFormat (moment closing_date "x") "dddd \t\h\e Do \o\f MMMM YYYY \a\t h:mm a"}}
-            </li>
-            {{/if ~}}
-          </ul>
-        </div>
-        <div class="detailed-info">
-          {{#if application_notes ~}}
-          <div class="mdc-typography--body1">
-            {{{application_notes}}}
-          </div>
-          {{/if ~}}
-          {{{rendered.goodmoves_downloads}}}
         </div>
       </div>
     </div>
