--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -1,5 +1,5 @@
-<div class="container-fluid home-banner" style="background-image: url('{{#if data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}');">
-  <div class="mdc-layout-grid banner-search">
+<div class="container-fluid home-banner">
+  <div class="mdc-layout-grid banner-search" style="background-image: url('{{#if data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}');">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-0-phone">
       </div>
@@ -209,41 +209,30 @@
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="mdc-layout-grid home-jobs">
-      <!-- <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
-      <div class="mdc-typography--headline5 v-margin-full">
-      Your saved searches (if authenticated)
+  <div class="mdc-layout-grid home-jobs">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full latest-jobs">
+        <div class="mdc-typography--headline5 v-margin-full">
+          Latest jobs
+        </div>
+        {{#each data.primaryResponse.hits.hits ~}}
+        {{> vacancy_gist _source}}
+        {{/each ~}}
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full top-jobs">
+        <div class="mdc-typography--headline5 v-margin-full">
+          Top jobs
+        </div>
+        {{#each data.supplimentaryResponses.top.hits.hits ~}}
+        {{> vacancy_gist _source}}
+        {{/each ~}}
+      </div>
     </div>
   </div>
-  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
-  <div class="mdc-typography--headline5 v-margin-full">
-  Your shortlist (if authenticated)
-</div>
-</div>
-</div> -->
-<div class="mdc-layout-grid__inner">
-  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full latest-jobs">
-    <div class="mdc-typography--headline5 v-margin-full">
-      Latest jobs
-    </div>
-    {{#each data.primaryResponse.hits.hits ~}}
-    {{> vacancy_gist _source}}
-    {{/each ~}}
-  </div>
-  <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full top-jobs">
-    <div class="mdc-typography--headline5 v-margin-full">
-      Top jobs
-    </div>
-    {{#each data.supplimentaryResponses.top.hits.hits ~}}
-    {{> vacancy_gist _source}}
-    {{/each ~}}
-  </div>
-</div>
-</div>
 
-{{> tfn_latest}}
+  {{> currently_recruiting}}
 
-{{> currently_recruiting}}
+  {{> tfn_latest}}
 </div>
