--- a/db/configurations/goodmoves/templates/pages/page.hbs
+++ b/db/configurations/goodmoves/templates/pages/page.hbs
@@ -5,7 +5,7 @@
 
   <div class="mdc-card">
 
-    {{#compare request.params.path "===" "advertise-with-us" ~}}
+    {{#compare request.params.path "===" "advertise" ~}}
     <h1 class="mdc-typography--headline4">
       Advertise with us
     </h1>
@@ -14,7 +14,7 @@
     </p>
     {{/compare ~}}
 
-    {{#compare request.params.path "===" "contact-us" ~}}
+    {{#compare request.params.path "===" "contact" ~}}
     <h1 class="mdc-typography--headline4">
       Contact us
     </h1>
@@ -40,7 +40,7 @@
     </ul>
     {{/compare ~}}
 
-    {{#compare request.params.path "===" "recruiting" ~}}
+    {{#compare request.params.path "===" "recruit" ~}}
     <h1 class="mdc-typography--headline4">The solution to all your recruitment needs</h1>
     <p>goodmoves is a recruitment service and careers hub which meets the needs of charities, voluntary organisations and social enterprises. We provide low cost, professional and targeted advertising for all your recruitment needs.</p>
     <h2 class="mdc-typography--headline5">Why choose us?</h2>
