--- a/db/configurations/scvo/templates/events/event-digital-booking.hbs
+++ b/db/configurations/scvo/templates/events/event-digital-booking.hbs
@@ -17,7 +17,7 @@
           <iframe src="https://www.surveygizmo.eu/s3/90064254/Event-Booking-Digital-Events?sfid={{data.primaryResponse.hits.hits.[0]._source.Id}}" frameborder="0" width="100%" height="400" style="overflow:hidden"></iframe>
           {{/if}}
           <p>
-            <strong>The information you provide will be stored in our database to allow us to respond to your booking request. <a href="/privacy/digital" target="_blank">Read our full privacy notice</a>.</strong>
+            <strong>The information you provide will be stored in our database to allow us to respond to your booking request. <a href="/privacy/training-and-events" target="_blank">Read our full privacy notice</a>.</strong>
           </p>
         </div>
       </div>
