--- a/db/configurations/goodmoves/partials/vacancy/mini.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/mini.hbs
@@ -1,12 +1,5 @@
-<div class="mdc-card list" data-vacancy-id="{{Id}}">
+<div class="mdc-card mini" data-vacancy-id="{{Id}}">
   {{> vacancy_key_info}}
-  <hr class="mdc-list-divider" />
-  {{#if description_short ~}}
-  <div class="search-result-article__snippet mdc-typography--body1">
-    {{{description_short}}}
-  </div>
-  <hr class="mdc-list-divider" />
-  {{/if}}
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
       <a href="/vacancy/{{slug}}" class="mdc-card__action">Find out more</a>
