Social links for orgs

--- a/db/configurations/goodmoves/partials/vacancy/full.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/full.hbs
@@ -95,7 +95,7 @@
         </div>
         {{/if ~}}
         {{#if organisation.website ~}}
-        {{#compare organisation.website "===" null ~}}
+        {{#compare organisation.website "!==" null ~}}
         <ul class="fa-ul">
           <li class="mdc-card__info--vacancy-website mdc-typography--body1">
             <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
