--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -7,7 +7,7 @@
         <div class="mdc-typography--headline3 v-margin-full">
           Charity and voluntary sector recruitment
         </div>
-        <div id="home-tab-bar" class="mdc-tab-bar mdc-tab-bar--left" data-mdc-auto-init="MDCTabBar">
+        <!-- <div id="home-tab-bar" class="mdc-tab-bar mdc-tab-bar--left" data-mdc-auto-init="MDCTabBar">
           <a class="mdc-tab mdc-tab--active" onclick="searchView()">
             <span class="far fa-search mdc-list-item__graphic" title="Search"></span>
             Search
@@ -17,7 +17,7 @@
             Browse
           </a>
           <span class="mdc-tab-bar__indicator"></span>
-        </div>
+        </div> -->
         <div id="search-view" class="search-form">
           <div action="/search" method="get">
             <input type="hidden" name="lat" value="">
