--- a/db/configurations/goodmoves/partials/organisation/full.hbs
+++ b/db/configurations/goodmoves/partials/organisation/full.hbs
@@ -7,10 +7,54 @@
       {{{rendered.goodmoves_charity_info}}}
       <div class="detailed-info">
         {{#if description ~}}
-        <div class="mdc-typography--body1">
+        <div class="mdc-typography--body1 v-margin">
           {{{description}}}
         </div>
         {{/if ~}}
+      </div>
+      <div class="key-info-extra">
+        <ul class="fa-ul">
+          {{#if website ~}}
+          {{#compare website "!==" null ~}}
+          <li class="mdc-card__info--vacancy-website mdc-typography--body1">
+            <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
+            <a href="{{website_url}}">
+              {{website}}
+            </a>
+          </li>
+          {{/compare ~}}
+          {{/if ~}}
+          {{#if twitter ~}}
+          {{#compare twitter "!==" null ~}}
+          <li class="mdc-card__info--vacancy-twitter mdc-typography--body1">
+            <span class="fa-li"><span class="fab fa-twitter fa-fw" title="Twitter"></span></span>
+            <a href="{{twitter_url}}">
+              {{twitter}}
+            </a>
+          </li>
+          {{/compare ~}}
+          {{/if ~}}
+          {{#if facebook ~}}
+          {{#compare facebook "!==" null ~}}
+          <li class="mdc-card__info--vacancy-facebook mdc-typography--body1">
+            <span class="fa-li"><span class="fab fa-facebook fa-fw" title="Facebook"></span></span>
+            <a href="{{facebook_url}}">
+              {{facebook}}
+            </a>
+          </li>
+          {{/compare ~}}
+          {{/if ~}}
+          {{#if linkedin ~}}
+          {{#compare linkedin "!==" null ~}}
+          <li class="mdc-card__info--vacancy-linkedin mdc-typography--body1">
+            <span class="fa-li"><span class="fab fa-linkedin fa-fw" title="LinkedIn"></span></span>
+            <a href="{{linkedin_url}}">
+              {{linkedin}}
+            </a>
+          </li>
+          {{/compare ~}}
+          {{/if ~}}
+        </ul>
       </div>
     </div>
     {{#if has_logo ~}}
@@ -18,51 +62,5 @@
       <img src="{{logo_url}}" alt="{{title}}" />
     </div>
     {{/if ~}}
-  </div>
-  <div class="mdc-card__info--organisation-row">
-    <div class="key-info-extra">
-      <ul class="fa-ul">
-        {{#if website ~}}
-        {{#compare website "!==" null ~}}
-        <li class="mdc-card__info--vacancy-website mdc-typography--body1">
-          <span class="fa-li"><span class="far fa-link fa-fw" title="Website"></span></span>
-          <a href="{{website_url}}">
-            {{website}}
-          </a>
-        </li>
-        {{/compare ~}}
-        {{/if ~}}
-        {{#if twitter ~}}
-        {{#compare twitter "!==" null ~}}
-        <li class="mdc-card__info--vacancy-twitter mdc-typography--body1">
-          <span class="fa-li"><span class="fab fa-twitter fa-fw" title="Twitter"></span></span>
-          <a href="{{twitter_url}}">
-            {{twitter}}
-          </a>
-        </li>
-        {{/compare ~}}
-        {{/if ~}}
-        {{#if facebook ~}}
-        {{#compare facebook "!==" null ~}}
-        <li class="mdc-card__info--vacancy-facebook mdc-typography--body1">
-          <span class="fa-li"><span class="fab fa-facebook fa-fw" title="Facebook"></span></span>
-          <a href="{{facebook_url}}">
-            {{facebook}}
-          </a>
-        </li>
-        {{/compare ~}}
-        {{/if ~}}
-        {{#if linkedin ~}}
-        {{#compare linkedin "!==" null ~}}
-        <li class="mdc-card__info--vacancy-linkedin mdc-typography--body1">
-          <span class="fa-li"><span class="fab fa-linkedin fa-fw" title="LinkedIn"></span></span>
-          <a href="{{linkedin_url}}">
-            {{linkedin}}
-          </a>
-        </li>
-        {{/compare ~}}
-        {{/if ~}}
-      </ul>
-    </div>
   </div>
 </div>
