--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -519,6 +519,7 @@ a {
   position: relative;
   z-index: 1;
   width: 100%;
+  background-color: #fff;
   margin-bottom: $unit*1.5;
   .mdc-card__info--organisation-title {
     padding: $unit;
@@ -585,7 +586,7 @@ a {
     font-weight: 600;
   }
   .mdc-card__info--organisation-title {
-    margin: 0;
+    margin: 0 0 $unit/2;
   }
   .mdc-card__info--vacancy .detailed-info,
   .organisation-type {
@@ -660,6 +661,7 @@ a {
       }
     }
     .detailed-info {
+      margin-top: $unit;
       padding: $unit;
       hr {
         height: 0;
