--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -98,7 +98,7 @@ header {
       height: $header-lower-height;
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-start {
-      background-image: linear-gradient(60deg, $mdc-theme-primary-dark, $mdc-theme-primary-dark 300px, rgba(0, 0, 0, 0.16) 301px, rgba(0, 0, 0, 0.16));
+      background-image: linear-gradient(60deg, rgba(0, 0, 0, 0.28), rgba(0, 0, 0, 0.3) 300px, rgba(0, 0, 0, 0.16) 301px, rgba(0, 0, 0, 0.16));
     }
     .mdc-top-app-bar__lower .mdc-top-app-bar__section--align-end {
       background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.16), rgba(0, 0, 0, 0.16) 60%, rgba(0, 0, 0, 0.08) 120%, rgba(0, 0, 0, 0.08));
