Styling of vacancy page

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -313,11 +313,11 @@ footer h3,
     }
   }
 }
-.goodmoves-job,
+.goodmoves-vacancy,
 .goodmoves-related-jobs {
   margin-bottom: $unit*2.5;
 }
-.goodmoves-job-search {
+.goodmoves-vacancy-search {
   .head {
     margin-bottom: $unit/2;
     .mdc-select {
@@ -577,7 +577,6 @@ a {
   opacity: 1;
 }
 .mdc-card.full {
-  box-shadow: none;
   .panel-heading {
     background: $mdc-theme-error;
     margin: $unit/2 0 $unit;
@@ -657,7 +656,7 @@ a {
         background-color: $mdc-theme-complimentary-dark;
       }
       a {
-        color: $mdc-theme-primary-dark;
+        color: $mdc-theme-complimentary-dark;
       }
     }
     .detailed-info {
@@ -681,6 +680,14 @@ a {
     }
   }
 }
+.goodmoves-vacancy .mdc-card.full {
+  box-shadow: none;
+}
+.goodmoves-page .mdc-card.full {
+  width: 100%;
+  background-color: #fff;
+}
+
 
 .mdc-chip-set {
   float: left;
