--- a/db/configurations/goodmoves/partials/organisation/full.hbs
+++ b/db/configurations/goodmoves/partials/organisation/full.hbs
@@ -14,7 +14,7 @@
       </div>
       <div class="key-info-extra">
         <ul class="fa-ul">
-          {{#if website ~}}
+          {{#if website_url ~}}
           {{#compare website "!==" null ~}}
           {{#compare website "!==" "http://" ~}}
           <li class="mdc-card__info--vacancy-website mdc-typography--body1">
@@ -26,7 +26,7 @@
           {{/compare ~}}
           {{/compare ~}}
           {{/if ~}}
-          {{#if twitter ~}}
+          {{#if twitter_url ~}}
           {{#compare twitter "!==" null ~}}
           {{#compare twitter "!==" "http://" ~}}
           <li class="mdc-card__info--vacancy-twitter mdc-typography--body1">
@@ -38,7 +38,7 @@
           {{/compare ~}}
           {{/compare ~}}
           {{/if ~}}
-          {{#if facebook ~}}
+          {{#if facebook_url ~}}
           {{#compare facebook "!==" null ~}}
           {{#compare facebook "!==" "http://" ~}}
           <li class="mdc-card__info--vacancy-facebook mdc-typography--body1">
@@ -50,7 +50,7 @@
           {{/compare ~}}
           {{/compare ~}}
           {{/if ~}}
-          {{#if linkedin ~}}
+          {{#if linkedin_url ~}}
           {{#compare linkedin "!==" null ~}}
           {{#compare linkedin "!==" "http://" ~}}
           <li class="mdc-card__info--vacancy-linkedin mdc-typography--body1">
