--- a/db/configurations/goodmoves/templates/pages/page.hbs
+++ b/db/configurations/goodmoves/templates/pages/page.hbs
@@ -3,7 +3,7 @@
 <div class="container-content goodmoves-page">
   {{> banner_ads}}
 
-  <div class="mdc-card">
+  <div class="mdc-card full mdc-elevation--z3">
     <h1 class="mdc-typography--headline4">
       {{{data.primaryResponse.hits.hits.[0]._source.title}}}
     </h1>
