--- a/db/configurations/goodmoves/templates/vacancies/vacancy.hbs
+++ b/db/configurations/goodmoves/templates/vacancies/vacancy.hbs
@@ -3,7 +3,7 @@
 <div class="container-content">
   {{#compare data.primaryResponse.hits.total ">" 0}}
 
-  <div class="goodmoves-job">
+  <div class="goodmoves-vacancy">
     {{#each data.primaryResponse.hits.hits ~}}
     {{> vacancy_full _source}}
     {{/each ~}}
