--- a/db/configurations/goodmoves/templates/vacancies/search.hbs
+++ b/db/configurations/goodmoves/templates/vacancies/search.hbs
@@ -2,6 +2,6 @@
 
 {{> vacancy_search_form this instance_id="perm"}}
 
-<div id="detailed-results-container" class="container-content goodmoves-job-search">
+<div id="detailed-results-container" class="container-content goodmoves-vacancy-search">
   {{> vacancy_search_results this}}
 </div>
