--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -627,6 +627,11 @@ a {
   .panel.panel--active {
     display: block;
   }
+  #panel-2 {
+    .detailed-info {
+      margin-top: 0;
+    }
+  }
   .vacancy-info-container {
     background-color: white;
     box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2), 0px 10px 14px 1px rgba(0, 0, 0, 0.14), 0px 4px 18px 3px rgba(0, 0, 0, 0.12);
