--- a/db/configurations/goodmoves/templates/pages/page.hbs
+++ b/db/configurations/goodmoves/templates/pages/page.hbs
@@ -4,9 +4,15 @@
   {{> banner_ads}}
 
   <div class="mdc-card full mdc-elevation--z3">
+    {{#if data.primaryResponse.hits.hits ~}}
     <h1 class="mdc-typography--headline4">
       {{{data.primaryResponse.hits.hits.[0]._source.title}}}
     </h1>
     {{{data.primaryResponse.hits.hits.[0]._source.content}}}
+    {{else}}
+    <h2 class="mdc-typography--headline5">
+      Error 404: Page not found
+    </h2>
+    {{/if ~}}
   </div>
 </div>
